# tonic-flatbuffers

./: Cargo.toml  README.md
examples/helloworld/: .gitignore  Cargo.toml  build.rs
examples/helloworld/fbs/: service.fbs
examples/helloworld/src/: client.rs  lib.rs  server.rs
flatbuffers-codegen/: Cargo.toml
flatbuffers-codegen/src/: lib.rs  main.rs  parser.rs  utils.rs
flatbuffers-codegen/src/flatbuffers/: attributes.rs  enum.rs  item.rs  primitives.rs  rpc_service.rs  statement.rs  struct.rs  table.rs  union.rs
flatbuffers-codegen/src/generate/: traits.rs
flatbuffers-codegen/src/generate/generator/: enum.rs  struct.rs  utils.rs
flatbuffers-codegen/src/parse/: parser.rs  utils.rs
flatbuffers-codegen/src/parse/flatbuffers/: attributes.rs  enum.rs  item.rs  primitives.rs  rpc_service.rs  struct.rs  table.rs  union.rs
src/: lib.rs
tonic-flatbuffers/: Cargo.toml
tonic-flatbuffers-build/: Cargo.toml
tonic-flatbuffers-build/src/: builder.rs  lib.rs
tonic-flatbuffers/src/: codec.rs  flatbuffers_owned.rs  lib.rs
