[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["Nicholas Crothers <ncrothers523@gmail.com>"]
repository = "https://github.com/ncrothers/tonic-flatbuffers.git"
license = "MIT"

[workspace]
resolver = "2"
members = ["tonic-flatbuffers", "tonic-flatbuffers-build", "examples/helloworld"]
