[package]
name = "flatbuffers-codegen"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.86"
convert_case = "0.6.0"
glob = "0.3.1"
lazy_static = "1.5.0"
path-clean = "1.0.1"
prettyplease = "0.2.22"
proc-macro2 = "1.0.86"
quote = "1.0.37"
regex = "1.10.6"
syn = { version = "2.0.77", features = ["full"] }
winnow = { version = "0.6.18" }

[dev-dependencies]
rstest = "0.22.0"
serial_test = "3.1.1"
