[package]
name = "tonic-flatbuffers-build"
description = "Generates tonic-compatible gRPC stubs for flatbuffers RPC services."
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
flatbuffers-build = "0.2.4"
itertools = "0.14.0"
prettyplease = "0.2.37"
regex = "1.12.2"
syn = "2.0.114"
tonic-prost-build = "0.14.2"
