[package]
name = "tonic-flatbuffers"
description = "Generates tonic-compatible gRPC stubs for flatbuffers RPC services."
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
bytes = "1.7.1"
flatbuffers = { version = ">=24.3.25,<25" }
paste = "1.0.15"
tonic = { version = "0.12.1" }
