[package]
name = "tonic-flatbuffers"
description = "Generates tonic-compatible gRPC stubs for flatbuffers RPC services."
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
bytes = "1.11.0"
flatbuffers = { version = ">=25.2.10,<26" }
paste = "1.0.15"
tonic = "0.14.2"
tonic-prost-build = "0.14.2"
