[package]
name = "helloworld-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tonic-flatbuffers = { path = "../../tonic-flatbuffers" }
flatbuffers = { version = "25.2.10" }
futures = "0.3.30"
tokio = { version = "1.46.1", features = ["rt-multi-thread", "time"] }
tonic = { version = "0.13.1", features = ["gzip"] }

[build-dependencies]
tonic-flatbuffers-build = { path = "../../tonic-flatbuffers-build" }
